Movement limit to the red dot

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="assets/index.css">
 </head>
 <body>
-	<div id="mc"></div>
+	<div>
+		<div id="mc"></div>
+	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 	<script type="text/javascript" src="assets/index.js"></script>
 </body>
