--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<title>Js Game Test</title>
-	<link rel="stylesheet" type="text/css" href="assets/index.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
 </head>
 <body>
 	<div>
 		<div id="mc"></div>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-	<script type="text/javascript" src="assets/index.js"></script>
+	<script type="text/javascript" src="assets/js/controller.js"></script>
+	<script type="text/javascript" src="assets/js/index.js"></script>
 </body>
 </html>
