Added background music, enemies and collisions! Now you can kill red aliens.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
 </head>
 <body>
-	<div>
-		<div id="mc"></div>
-	</div>
+	<audio src="assets/audio/loop.wav" autoplay="autoplay">
+	<p>If you are reading this, it is because your browser does not support the audio element.     </p>
+	</audio>
+	<div id="mc"></div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 	<script type="text/javascript" src="assets/js/controller.js"></script>
+	<script type="text/javascript" src="assets/js/collision.js"></script>
+	<script type="text/javascript" src="assets/js/enemies.js"></script>
 	<script type="text/javascript" src="assets/js/index.js"></script>
 </body>
 </html>
